# neonfs

./: .check.exs  .dockerignore  .drone.yml  .gitignore  .mix_audit_ignore  .tool-versions  AGENTS.md  CHANGELOG.md  Containerfile.dev  Dockerfile.ci  README.md  bake.hcl  compose.yml  config.tml  docker-compose.yml  mix.exs  next_session  renovate.json
.devcontainer/: devcontainer.json  setup.sh
.forgejo/: README.md
.forgejo/workflows/: bench.yml  ci.yml  release.yml
config/: config.exs
containers/: Containerfile.base  Containerfile.builder  Containerfile.ci  Containerfile.cifs  Containerfile.cli  Containerfile.containerd  Containerfile.core  Containerfile.csi  Containerfile.deb-builder  Containerfile.dev  Containerfile.docker  Containerfile.fuse  Containerfile.nfs  Containerfile.omnibus  Containerfile.s3  Containerfile.webdav  bake.hcl  bake.sh
deploy/prometheus/: alerts.yml
docs/: api-reference.md  cli-reference.md  containerd.md  deployment.md  developer-guide.md  docker-plugin.md  operator-guide.md  orchestration.md  user-guide.md
docs/plans/: 2026-03-07-full-mesh-connectivity.md  2026-04-22-capacity-history.md  2026-04-22-chunker-placement.md  2026-04-22-csi-scaffold.md  2026-04-22-docker-fuse-integration-test.md  2026-04-22-dr-snapshots.md  2026-04-22-fusermount3-port-wrapper.md  2026-04-22-log-structured-write-absorption.md  2026-04-22-namespace-coordinator.md  2026-04-22-nfs-read-path.md  2026-04-22-samba-vfs-scaffold.md
docs/runbooks/: README.md  (+11 more)
fuse_server/: .check.exs  .gitignore  Cargo.toml  README.md  mix.exs
lib/: neon_fs.ex
neonfs-cli/: .check.exs  .formatter.exs  .gitignore  Cargo.toml  README.md  mix.exs
neonfs-cli/src/: daemon.rs  error.rs  main.rs  tls.rs
neonfs-cli/src/commands/: acl.rs  audit.rs  backup.rs  ca_bootstrap.rs  cluster.rs  credential.rs  dr.rs  drive.rs  escalation.rs  fuse.rs  gc.rs  job.rs  mod.rs  mount.rs  nfs.rs  node.rs  repair.rs  s3.rs  scrub.rs  volume.rs  worker.rs
neonfs-cli/src/output/: json.rs  mod.rs  table.rs
neonfs-cli/src/term/: mod.rs  types.rs
neonfs_api/: .formatter.exs  .gitignore  README.md  mix.exs
neonfs_cifs/: .gitignore  README.md  mix.exs
neonfs_client/: .check.exs  .dialyzer_ignore.exs  .dockerignore  .gitignore  README.md  mix.exs
neonfs_client/native/neonfs_chunker/: Cargo.toml
neonfs_client/native/neonfs_chunker/src/: chunking.rs  lib.rs
neonfs_containerd/: .check.exs  .doctor.exs  .gitignore  README.md  mix.exs
neonfs_core/: .check.exs  .dialyzer_ignore.exs  .gitignore  Cargo.toml  README.md  mix.exs
neonfs_core/native/neonfs_blob/: Cargo.toml  README.md
neonfs_core/native/neonfs_blob/examples/: index_tree_bench.rs
neonfs_core/native/neonfs_blob/src/: chunking.rs  codec.rs  compression.rs  encryption.rs  erasure.rs  error.rs  hash.rs  index_tree.rs  index_tree_blob_store.rs  lib.rs  path.rs  store.rs
neonfs_csi/: .check.exs  .doctor.exs  .gitignore  README.md  mix.exs
neonfs_docker/: .gitignore  README.md  mix.exs
neonfs_fuse/: .check.exs  .gitignore  Cargo.toml  README.md  mix.exs
neonfs_fuse/native/neonfs_fuse/: Cargo.toml  README.md
neonfs_fuse/native/neonfs_fuse/src/: channel.rs  error.rs  filesystem.rs  lib.rs  mount.rs  operation.rs  server.rs
neonfs_fuse/native/neonfs_fuse/tests/: mount_integration.rs
neonfs_iam/: .check.exs  .formatter.exs  .gitignore  CLAUDE.md  README.md  mix.exs
neonfs_integration/: .check.exs  .dialyzer_ignore.exs  .gitignore  README.md  mix.exs
neonfs_nfs/: .check.exs  .gitignore  README.md  mix.exs
neonfs_nfs/native/neonfs_nfs/: Cargo.toml
neonfs_nfs/native/neonfs_nfs/src/: channel.rs  filesystem.rs  handle.rs  lib.rs  test_client.rs
neonfs_omnibus/: .check.exs  .gitignore  README.md  mix.exs
neonfs_s3/: .check.exs  .gitignore  README.md  mix.exs
neonfs_test_support/: .dialyzer_ignore.exs  README.md  mix.exs
neonfs_webdav/: .gitignore  README.md  mix.exs
nfs_server/: .check.exs  README.md  mix.exs
packaging/: README.md  build-debs.sh  build-vfs-deb.sh  build-vfs-module.sh
resources/: dev_zshrc  ralph.md
s3_server/: README.md  mix.exs
scripts/: acceptance-test-containers.sh  acceptance-test.sh  check_buffering.sh  regen-cli-reference.sh
spec/: api-surfaces.md  appendix.md  architecture.md  cluster-ca.md  data-model.md  data-transfer.md  deployment.md  discovery.md  gap-analysis.md  implementation.md  metadata.md  node-management.md  observability.md  operations.md  packages.md  pubsub.md  replication.md  security.md  service_discovery.md  specification.md  storage-tiering.md  system-volume.md  testing.md  tls-distribution.md
tasks/: README.md  progress.md  task_0001_blob_crate_scaffolding.md  task_0002_check_exs_rust_integration.md  task_0003_blob_hash_module.md  task_0004_blob_directory_layout.md  task_0005_blob_store_read_write.md  task_0006_blob_verification.md  task_0007_blob_compression.md  task_0008_blob_chunking.md  task_0009_blob_tier_migration.md  task_0010_fuse_crate_scaffolding.md  task_0011_fuse_channel_communication.md  task_0012_fuse_mount_operations.md  task_0013_fuse_write_operations.md  task_0014_elixir_blob_wrapper.md  task_0015_elixir_chunk_metadata.md  task_0016_elixir_file_metadata.md  task_0017_elixir_volume_config.md  task_0018_elixir_write_path.md  task_0019_elixir_read_path.md  task_0020_elixir_fuse_handler.md  task_0021_elixir_fuse_mount_manager.md  task_0022_cli_crate_scaffolding.md  task_0023_cli_daemon_connection.md  task_0024_cli_handler_module.md  task_0025_cli_commands_implementation.md  task_0026_elixir_supervision_tree.md  task_0027_fuse_supervision_tree.md  task_0028_systemd_integration.md  task_0029_elixir_release_config.md  task_0030_integration_test_single_node.md  task_0031_ra_integration_setup.md  task_0032_cluster_bootstrap.md  task_0033_node_join_flow.md  task_0034_distributed_chunk_metadata.md  task_0035_basic_replication.md  task_0036_remote_chunk_read.md  task_0037_integration_test_multi_node.md  task_0040_metadata_persistence_dets.md  (+150 more)
test/: neon_fs_test.exs
test-rig/: .gitignore  README.md  acceptance  neonfs-rig
webdav_server/: README.md  mix.exs
(+1053 files in other folders)
