[package]
name = "neonfs-cli"
version = "0.1.6"
edition = "2021"
authors = ["NeonFS Contributors"]
description = "Command-line interface for NeonFS distributed filesystem"
license = "MIT"

[[bin]]
name = "neonfs-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Erlang distribution (for daemon communication)
erl_rpc = "0.3"    # High-level Erlang RPC client
# Pinned to =0.8 because erl_rpc 0.3 transitively depends on eetf 0.8 via
# erl_dist 0.6. Using a different version causes two incompatible copies of eetf
# in the dependency graph, breaking type compatibility at NIF boundaries.
# Unpin when erl_rpc releases a version that depends on erl_dist >=0.7.
eetf = "=0.8.0"
num-traits = "0.2"  # For BigInteger → u64/i64 via ToPrimitive
hex = "0.4"        # For cookie encoding
rand = "0.10"       # For generating node names

[dev-dependencies]
tempfile = "3"
