[package]
name = "neonfs-cli"
version = "0.1.10"
edition = "2021"
authors = ["NeonFS Contributors"]
description = "Command-line interface for NeonFS distributed filesystem"
license = "MIT"

[[bin]]
name = "neonfs-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
smol = "2"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Erlang distribution (direct, with TLS support)
erl_dist = "0.8"
eetf = "0.11"
num-traits = "0.2"  # For BigInteger → u64/i64 via ToPrimitive
hex = "0.4"         # For cookie encoding
rand = "0.10"       # For generating node names

# TLS for distribution connections (certificate loading for future TLS distribution)
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }

[dev-dependencies]
tempfile = "3"
