[package]
name = "neonfs-cli"
version = "0.2.1"
edition = "2021"
authors = ["NeonFS Contributors"]
description = "Command-line interface for NeonFS distributed filesystem"
license = "MIT"

[[bin]]
name = "neonfs-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
smol = "2"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Erlang distribution (direct, with TLS support)
erl_dist = "0.8"
eetf = "0.11"
num-traits = "0.2"  # For BigInteger → u64/i64 via ToPrimitive
hex = "0.4"         # For cookie encoding
rand = "0.10"       # For generating node names
futures = "0.3"     # For AsyncRead/AsyncWrite trait impls
md5 = "0.8"         # For distribution handshake challenge/response

# TLS for distribution connections
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
futures-rustls = "0.26"

# CA emergency-bootstrap tarball validation (#503)
tar = "0.4"
flate2 = "1"
x509-parser = "0.18"

# CA emergency-bootstrap node cert regeneration (#518)
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
time = { version = "0.3", features = ["formatting"] }  # CRL timestamps + RFC3339 audit log (#518)
sha2 = "0.10"  # CA fingerprints in emergency-bootstrap audit log (#518)
libc = "0.2"   # getuid() for emergency-bootstrap audit log (#518)

[dev-dependencies]
tempfile = "3"
