[package]
name = "neonfs_blob"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"

[dev-dependencies]
proptest = "1.6"
serde_json = "1.0"
tempfile = "3.16"
