[package]
name = "neonfs_blob"
version = "0.3.1"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustler = "0.37.2"
sha2 = "0.11"
hex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
rand = "0.10"
zstd = "0.13"
fastcdc = "4.0"
reed-solomon-erasure = { package = "solana-reed-solomon-erasure", version = "4.0.1-3" }
aes-gcm = "0.10"
libc = "0.2"

[dev-dependencies]
proptest = "1.6"
serde_json = "1.0"
tempfile = "3.16"
