[package]
name = "neonfs_fuse"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# FUSE support is enabled by default in containerized environments
# Disable with --no-default-features if building without FUSE libraries
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
rustler = "0.37.2"
# FUSE is optional to support building on systems without libfuse-dev
# But default feature enables it for container builds
fuser = { version = "0.16", optional = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
log = "0.4"
thiserror = "2.0"
libc = "0.2"
