[package]
name = "neonfs_nfs"
version = "0.1.0"
authors = ["James Harton <james@harton.dev>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
nfs3_server = { git = "https://github.com/jimsynz/nfs3", branch = "custom-generation" }
nfs3_client = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "net", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
